# direct_image_alignment

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cfg/: log.conf
cfg/log/: solver.conf  system.conf
include/direct_image_alignment/: direct_image_alignment.h
include/vslam/: vslam.h
src/: Camera.cpp  Camera.h  Feature2D.cpp  Feature2D.h  Frame.cpp  Frame.h  ImageAlignment.cpp  ImageAlignment.h  Point3D.cpp  Point3D.h  Pose.cpp  Pose.h  math.cpp  math.h
src/core/: CMakeLists.txt  Camera.cpp  Camera.h  Feature2D.cpp  Feature2D.h  Frame.cpp  Frame.h  Point3D.cpp  Point3D.h  algorithm.cpp  algorithm.h  types.h
src/core/include/core/: core.h
src/core/src/: Camera.cpp  Camera.h  Exceptions.h  Feature2D.cpp  Feature2D.h  Frame.cpp  Frame.h  Kernel2d.h  Point3D.cpp  Point3D.h  PoseWithCovariance.cpp  PoseWithCovariance.h  Trajectory.cpp  Trajectory.h  algorithm.cpp  algorithm.h  image_transform.h  macros.h  types.h
src/core/test/: test_algorithm.cpp  test_camera.cpp  test_random.cpp
src/feature_extraction/: Descriptor.h  FeatureExtraction.cpp  FeatureExtraction.h  FeatureExtractionOpenCv.cpp  FeatureExtractionOpenCv.h  feature_extraction.h
src/feature_tracking/: Tracker3d.cpp  Tracker3d.h
src/image_alignment/: ImageAlignment.cpp  ImageAlignment.h  ImageAlignment.hpp  ImageAlignmentAutoDiff.hpp  ImageAlignmentCeres.hpp  ImageAlignmentDense.cpp  ImageAlignmentDense.h  ImageAlignmentSparse.cpp  ImageAlignmentSparse.h  ImageAlignmentSparseCeres.hpp  ImageAlignmentSparseCeresAutoDiff.hpp  LocalParameterizationSE3.h  PhotometricLoss.cpp  PhotometricLoss.h  PhotometricLoss.hpp  SE3Parameterization.h
src/kalman/: CMakeLists.txt
src/kalman/include/kalman/: kalman.h
src/kalman/src/: EKFConstantVelocitySE3.cpp  EKFConstantVelocitySE3.h  KalmanFilter.cpp  KalmanFilter.h  KalmanFilterSE3.cpp  KalmanFilterSE3.h
src/kalman/test/: test_kalman.cpp
src/least_squares/: CMakeLists.txt
src/least_squares/include/least_squares/: least_squares.h
src/least_squares/src/: GaussNewton.cpp  GaussNewton.h  GaussNewton.hpp  Loss.cpp  Loss.h  NormalEquations.cpp  NormalEquations.h  Prior.h  Scaler.cpp  Scaler.h  Solver.h
src/least_squares/test/: test_loss.cpp
src/lukas_kanade/: CMakeLists.txt  LukasKanade.cpp  LukasKanade.h  LukasKanade.hpp  LukasKanadeAffine.cpp  LukasKanadeAffine.h  LukasKanadeCompositional.h  LukasKanadeCompositional.hpp  LukasKanadeInverseCompositional.h  LukasKanadeInverseCompositional.hpp  LukasKanadeOpticalFlow.cpp  LukasKanadeOpticalFlow.h  LukasKanadeSE3d.cpp  LukasKanadeSE3d.h  Warp.cpp  Warp.h  WarpAffine.cpp  WarpAffine.h  WarpOpticalFlow.cpp  WarpOpticalFlow.h  WarpSE3.cpp  WarpSE3.h
src/lukas_kanade/include/lukas_kanade/: lukas_kanade.h
src/lukas_kanade/scripts/: epipolar_lines copy.py  epipolar_lines.py
src/lukas_kanade/src/: ForwardAdditive.cpp  ForwardAdditive.h  ForwardAdditive.hpp  InverseCompositional.cpp  InverseCompositional.h  InverseCompositional.hpp  InverseCompositionalStacked.cpp  InverseCompositionalStacked.h  InverseCompositionalStacked.hpp  LukasKanade.h  LukasKanade.hpp  LukasKanadeInverseCompositional.h  LukasKanadeInverseCompositional.hpp  LukasKanadeInverseCompositionalStacked.h  LukasKanadeInverseCompositionalStacked.hpp  Warp.cpp  Warp.h
src/lukas_kanade/test/: test_lukas_kanade_affine.cpp  test_lukas_kanade_flow.cpp  test_lukas_kanade_se3.cpp  test_warp.cpp
src/motion_prediction/: MotionPrediction.cpp  MotionPrediction.h
src/odometry/: CMakeLists.txt  RgbdOdometry.cpp  RgbdOdometry.h
src/odometry/cfg/log/: odometry.conf
src/odometry/include/odometry/: odometry.h
src/odometry/scripts/: vehicle_motion.py
src/odometry/src/: AlignmentSE3.h  BundleAdjustment.cpp  BundleAdjustment.h  FeatureTracking.cpp  FeatureTracking.h  IterativeClosestPoint.cpp  IterativeClosestPoint.h  IterativeClosestPointOcv.cpp  IterativeClosestPointOcv.h  KeyFrameSelection.cpp  KeyFrameSelection.h  Map.cpp  Map.h  MapOptimization.cpp  MapOptimization.h  MotionPrediction.cpp  MotionPrediction.h  Odometry.cpp  Odometry.h  OdometryRgbd.cpp  OdometryRgbd.h  PoseGraph.cpp  PoseGraph.h  RgbdAlignmentOpenCv.cpp  RgbdAlignmentOpenCv.h  RgbdOdometry.cpp  RgbdOdometry.h  RgbdOdometryKalman.cpp  RgbdOdometryKalman.h  SE3Alignment.cpp  SE3Alignment.h  Trajectory.cpp  Trajectory.h
src/odometry/test/: test_alignment_se3.cpp  test_alignment_se3_multi_frame.cpp  test_ba.cpp  test_ceres_ba.cpp  test_frame.cpp  test_odometry.cpp  test_odometry_icp.cpp  test_odometry_rgbd.cpp  test_odometry_rgbd_cv.cpp  test_pose_graph.cpp  test_tracking.cpp  test_trajectory.cpp
src/solver/: CMakeLists.txt  GaussNewton.cpp  GaussNewton.h  GaussNewton.hpp  LeastSquaresSolver.cpp  LeastSquaresSolver.h  LevenbergMarquardt.cpp  LevenbergMarquardt.h  LevenbergMarquardt.hpp  Loss.cpp  Loss.h  solver.h
src/solver/cfg/log/: solver.conf
src/solver/include/solver/: solver.h
src/solver/src/: GaussNewton.h  GaussNewton.hpp  Loss.cpp  Loss.h  Prior.h  Scaler.cpp  Scaler.h
src/solver/test/: test_loss.cpp
src/system/: RgbdAlignment.cpp  RgbdAlignment.h  StereoAlignment.cpp  StereoAlignment.h  StereoTracking.cpp  StereoTracking.h
src/utils/: CMakeLists.txt  Exceptions.h  Log.cpp  Log.h  utils.cpp  utils.h  visuals.cpp  visuals.h
src/utils/include/utils/: utils.h
src/utils/src/: Log.cpp  Log.h  utils.cpp  visuals.cpp  visuals.h
src/utils/test/: CMakeLists.txt  test_log.cpp  test_plot.cpp
test/: CMakeLists.txt  test_algorithm.cpp  test_camera.cpp  test_feature_extraction.cpp  test_frame.cpp  test_image_alignment.cpp  test_image_alignment_dense.cpp  test_log.cpp  test_lukas_kanade.cpp  test_lukas_kanade_affine.cpp  test_lukas_kanade_flow.cpp  test_lukas_kanade_se3.cpp  test_lukas_kanade_se3d.cpp  test_math.cpp  test_motion_prediction.cpp  test_plot.cpp  test_random.cpp  test_solver.cpp  test_stereo_alignment.cpp
tools/: Macros.cmake  vslamConfig.cmake.in
